feat(FR-02): 完成儀表板 API 完整實作
- 實現五個端點：/dashboard/summary、/dashboard/rankings、/dashboard/sourcing-summary、/dashboard/todos、/dashboard/heat-sources
- KPI：A級主推去重計數、高風險僅計 HIGH、候選品項依 A/B 軌過濾
- 四榜：VIRAL/FESTIVAL/REPLENISHMENT/SEASONAL 各榜獨立，含情境判定標籤與覆寫標記
- 排行新增風險指示（紅點 HIGH / 黃點 MEDIUM）
- B 軌摘要：依 timeGapDays 升冪取 Top 3，已淘汰者保留供灰底顯示
- 空狀態：scoringExecuted 旗標
- ISO 週：Asia/Taipei + WeekFields.ISO
- 待回填結案：逾 7 天未回填清單
- 熱度來源：4 來源狀態，不快取
- 對齊規格書 §8.2 與畫面示意圖 S-02